--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       html { background: url(http://i.imgur.com/HFDc8be.jpg) no-repeat center center fixed; background-size: cover; font-size: 1.3em;}
       * { font-family: monospace }
       a { color: yellow; }
-      article { width: 75%;max-width: 600px; color: white; margin: 20px auto; background-color: rgba(0,0,0,0.85); padding: 20px; }
+      article { width: 75%;max-width: 800px; color: white; margin: 20px auto; background-color: rgba(0,0,0,0.85); padding: 20px; }
     </style>
   </head>
   <body>
@@ -61,8 +61,10 @@
 
   <h3>Help needed</h3>
   <p>Need to investigate form of ownership + taxes + legal . Can I haz a hacker lawyer?</p>
-  <p>Other ways of helping - <a href="https://events.titanpad.com/57?">see pad</a> - asking because that require significant expertise and it is so much easier if I ask for 10 minutes instead of me making constly mistakes... (I want to do this right from the very beginning)</p>
-  <p>I'm not asking for money as I'm currently contracting in Central London. My whole life I was on a limited budget and I was thinking to myself: "what if money was not an object" (<a href="https://www.youtube.com/watch?v=KSyHWMdH9gk">see Youtube by Alan Watts</a>). Currently (by default) choosing best option money can buy... (I want to do this right from the very beginning)</p>
+  <p>Other ways of helping - <a href="https://events.titanpad.com/57?">see pad</a> 
+  
+  <h3>My relationship with money</h3>
+  <p>I'm not asking for money as I'm currently contracting in Central London. My whole life I was on a limited budget and I was thinking to myself: "what if money was not an object" (<a href="https://www.youtube.com/watch?v=KSyHWMdH9gk">see Youtube by Alan Watts</a>). Currently (by default) choosing better option, rather than the cheaper one.</p>
 
 </p>
 
