--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        <li>Communication protocols (we are able to speek freely)</li>
        <li>Lifelong learning</li>
        <li>We treat all the species well (want meat = kill your own)</li>
-       <li>Healthy relationship with money (some high-yield remote work to buy more land)</li>
+       <li>Healthy relationship with money (some high-yield remote work)</li>
        <li>Do I really have to mention full automation?</li>
       </ul>
 
@@ -60,7 +60,7 @@
     </ul>
 
   <h3>Help needed</h3>
-  <p>Need to investigate form of ownership + taxes + legal . Can I haz a hacker lawyer?</p>
+  <p>Need to investigate form of ownership . Can I haz a hacker lawyer?</p>
   <p>Other ways of helping - <a href="https://events.titanpad.com/57?">see pad</a> 
   
   <h3>My relationship with money</h3>
@@ -70,6 +70,9 @@
 
   <section>
     Working on better ways to stay in touch (thank you <strong>touya</strong>, thank you <strong>shibumi</strong>). For the moment:
+    
+    <h3><a href="mailto:mstefanow@gmail.com">mstefanow@gmail.com</a></h3>
+    <b>Drop me a line or signup for the list:</b>
     
     <!-- Begin MailChimp Signup Form -->
       <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
