--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <h1>genesis.re</h1>
 
       <ul>
-        <li>I love CCC. (and other ofestivals too)</li>
-        <li>So much work wasted in setup and teardown phase..</li> 
+        <li>I love CCC. (and other festivals too)</li>
+        <li>So much work wasted in setup and teardown.</li> 
         <li>I want to have festival lifestyle at all times.</li> 
         <li>Buying land in Portugal + setting up infrastructure.</li>
       </ul>
@@ -71,7 +71,7 @@
 
   <h3>Help needed</h3>
   <p>Need to investigate form of ownership. Can I haz a hacker lawyer?</p>
-  <p>I was thinking something along the lines of Shamir's Secret Sharing (<a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing">wiki</a>) - 100 parts of the private key - 51 pieces required to unlock the master key.</p>
+  <p>I was thinking something along the lines of Shamir's Secret Sharing (<a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing">wiki</a>) - 100 parts of the private key - 51 pieces required to unlock the master key and make a decision... See also: Loomio and DemocracyOS.</p>
   <p>I know many people are thinking along the same lines... I'm moving slower to arrive faster. Setting solid foundation that will last for generations. Money is a tool that used wisely will allow us to setup proper infrastructure and allow for contingencies. If you think that <strong>genesis.re</strong> is something for you I'm happy to help you find a decent job in London (it's a bubble, everyone is hiring).</strong></p>
 
 </p>
