--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
   <body>
     <article>
       <h1>genesis.re</h1>
+      <p>
+        <strong>genesis</strong> as in source, beginning, origin
+      </p>      
+      <p>
+        <strong>re</strong> as in reset, restart, renew
+      </p>
+      <p>
+        (FYI the .re domain belongs to a french teritory on the Indian Ocean_
+      </p>
+      
 
       <ul>
         <li>I love CCC. (and other festivals too)</li>
@@ -34,14 +44,15 @@
       <p>I've to many places such as Ozora, Boom, Burning Man, Glastonbury and now CCC. Having family allows me to think longer term and fight for the future of Gaia (born 2012) and Aura (born 2014).
 
       <h3>3 year vision</h3>
-      <p>1km<sup>2</sup> of land in Portugal. Satellite internet. Own energy, water, waste treatment, permaculture, a lot of sun, warm climate, access to the ocean, favourable legal situation.</p>
+      <p>A few acres of land in Portugal (enough to experiment). Satellite internet. Own energy, water, waste treatment, permaculture, a lot of sun, warm climate, access to the ocean, favourable legal situation.</p>
       <ul>
         <li>sun = energy</li>
         <li>ocean = water</li>
         <li>energy + water = fresh water</li>
         <li>fresh water + sun = plants</li>
         <li>plants = food</li>
-        <li>  (just do the math)</li>
+        <li>&nbsp;&nbsp;&nbsp;(just do the math)</li>
+        <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(not off-the-grid from day 1 but having that vision in mind)</li>
         </ul>
       
       </p>
@@ -55,9 +66,11 @@
        <li>Strenght and independence (you are joining because you want)</li>
        <li>Open-source from the ground-up (including legal documents)</li>
        <li>Communication protocols (able to discuss 'tabu')</li>
+       <li>Be excellent to each other!</li>
        <li>Lifelong learning</li>
        <li>We treat all the species well (want meat = kill your own)</li>
        <li>Healthy relationship with money (some high-yield remote work)</li>
+       <li>Supportive environment to launch startups (next to none cost of living)</li>
        <li>Do I really have to mention full automation?</li>
       </ul>
 
@@ -70,10 +83,10 @@
     </ul>
 
   <h3>Help needed</h3>
-  <p>Need to investigate form of ownership. Can I haz a hacker lawyer?</p>
-  <p>I was thinking something along the lines of Shamir's Secret Sharing (<a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing">wiki</a>) - 100 parts of the private key - 51 pieces required to unlock the master key and make a decision... See also: Loomio and DemocracyOS.</p>
+  <p>Need to investigate form of ownership. Want to create structure stronger than myself.</p>
+  <p>I was thinking about Shamir's Secret Sharing (<a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing">wiki</a>) - 100 parts of the private key - 51 pieces required to unlock the master key and make a decision... See also: Loomio and DemocracyOS.</p>
   <p>I know many people are thinking along the same lines... I'm moving slower to arrive faster. Setting solid foundation that will last for generations. Money is a tool that used wisely will allow us to setup proper infrastructure and allow for contingencies. If you think that <strong>genesis.re</strong> is something for you I'm happy to help you find a decent job in London (it's a bubble, everyone is hiring).</strong></p>
-
+  <p>Considering crowdfunding campaign - 100 units - priced approximately $1k each with some incentives for early members. It's constant work in progress, remember you can always contribute on <a href="https://github.com/genesisdotre/genesisdotre.github.io">github</a></p>
 </p>
 
   <section>
