--- a/index.html
+++ b/index.html
@@ -63,15 +63,18 @@
 
       <h3>Core values</h3>
       <ul>
+       <li>Be excellent to each other!</li>
+       <li>Adding value - WIN WIN WIN - it's more than 'zero sum' game</li>
        <li>Strenght and independence (you are joining because you want)</li>
        <li>Open-source from the ground-up (including legal documents)</li>
-       <li>Communication protocols (able to discuss 'tabu')</li>
-       <li>Be excellent to each other!</li>
+       <li>Communication protocols (being able to discuss 'tabu')</li>
+       <li>Sharing is caring</li>
        <li>Lifelong learning</li>
        <li>We treat all the species well (want meat = kill your own)</li>
        <li>Healthy relationship with money (some high-yield remote work)</li>
        <li>Supportive environment to launch startups (next to none cost of living)</li>
-       <li>Do I really have to mention full automation?</li>
+       <li>Fully immersive research enviroment allowing polyphasic sleep and peak performance</li>
+       <li>Permaculture and automation (we employ nature and technology to do the hard work)</li>
       </ul>
 
     <h3>Inspiration</h3>
@@ -85,12 +88,14 @@
   <h3>Help needed</h3>
   <p>Need to investigate form of ownership. Want to create structure stronger than myself.</p>
   <p>I was thinking about Shamir's Secret Sharing (<a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing">wiki</a>) - 100 parts of the private key - 51 pieces required to unlock the master key and make a decision... See also: Loomio and DemocracyOS.</p>
-  <p>I know many people are thinking along the same lines... I'm moving slower to arrive faster. Setting solid foundation that will last for generations. Money is a tool that used wisely will allow us to setup proper infrastructure and allow for contingencies. If you think that <strong>genesis.re</strong> is something for you I'm happy to help you find a decent job in London (it's a bubble, everyone is hiring).</strong></p>
+  <p>I know many people are thinking along the same lines... Moving slower to arrive faster. Setting solid foundation that will last for generations. Money is a tool that used wisely will allow us to setup proper infrastructure and allow for contingencies. If you think that <strong>genesis.re</strong> is something for you I'm happy to help you find a decent job in London (it's a bubble, everyone is hiring).</strong></p>
   <p>Considering crowdfunding campaign - 100 units - priced approximately $1k each with some incentives for early members. It's constant work in progress, remember you can always contribute on <a href="https://github.com/genesisdotre/genesisdotre.github.io">github</a></p>
+  
 </p>
 
   <section>
     <h3>Current way to keep in touch:</h3>
+    <p>Join #genesis on hackint.org (<a href="https://webirc.hackint.org/">WebIRC</a></p><br>
     <h3><a href="mailto:mstefanow@gmail.com">mstefanow@gmail.com</a></h3>
     <b>Drop me a line or signup for the list:</b>
     
@@ -117,6 +122,7 @@
   </section>
     
   <footer>
+    Source code available on <a href="https://github.com/genesisdotre">GitHub</a><br>
     Project by <a href="https://twitter.com/stefek99">@stefek99</a> and others<br>
     Artwork by <a href="http://wardyworks.co.uk">Alexander Ward</a><br>
   </footer>
