--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <h3>Inspiration</h3>
       <ul>
-       <li>CHT + Hacking Housing</li>
+       <li><a href="http://totalism.org/"></a>Cyberhippietotalism</a> (CHT#1) + Hacking Housing</li>
        <li>Lemurian Embassy</li>
        <li>Auroville</li>
        <li>Tamera</li>
@@ -118,6 +118,7 @@
     Source code available on <a href="https://github.com/genesisdotre">GitHub</a><br>
     Project by <a href="https://twitter.com/stefek99">@stefek99</a> and others<br>
     Artwork by <a href="http://wardyworks.co.uk">Alexander Ward</a><br>
+    All the content licenced under <a href="http://www.wtfpl.net/">WTFPL</a> and <a href="https://creativecommons.org/">Creative Commons</a>
   </footer>
   
   </article>
