--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <h3>Inspiration</h3>
       <ul>
-       <li><a href="http://totalism.org/"></a>Cyberhippietotalism</a> (CHT#1) + Hacking Housing</li>
+       <li><a href="http://totalism.org/">Cyberhippietotalism</a> (CHT#1) + Hacking Housing</li>
        <li>Lemurian Embassy</li>
        <li>Auroville</li>
        <li>Tamera</li>
