--- a/index.html
+++ b/index.html
@@ -41,20 +41,23 @@
       <p>I've to many places such as Ozora, Boom, Burning Man, Glastonbury and now CCC. Having family - <a href="http://stefanow.net">stefanow.net</a> allows me to think longer term and fight for a better future of Gaia (born 2012) and Aura (born 2014).
 
       <h3>3 year vision</h3>
-      <p>A few acres of land in Portugal (enough to experiment). Satellite internet. Own energy, water, waste treatment, permaculture, a lot of sun, warm climate, access to the ocean, favourable legal situation.</p>
+      <p>A few acres of land in Portugal (enough to experiment). Satellite internet. Own energy, water, waste treatment (see soil production at Boom Festival), permaculture, a lot of sun, warm climate, access to the ocean, favourable legal situation.</p>
       <ul>
         <li>sun = energy</li>
         <li>ocean = water</li>
         <li>energy + water = fresh water</li>
         <li>fresh water + sun = plants</li>
         <li>plants = food</li>
-        <li>&nbsp;&nbsp;&nbsp;(not off-the-grid from day 1 but with that vision in mind)</li>
+        <li>&nbsp;&nbsp;&nbsp;(not off-the-grid from day 1 but start with that vision in mind)</li>
         </ul>
       </p>
 
       <h3>10 year vision</h3>
       <p>Multiple locations: US, Goa, Bali, New Zealand, Réunion, Lanzarote, floating islands...</p>
       <p>Own currency, own passports, own sattelite network, own fiber optic underneath the ocean...</p>
+      
+      <h3>100 year vision</h3>
+      <p>We have all the systems in place, we can spread to outer space. Human consciousness is beatifully unique - it would be a shame to go excint because of some silly planetary cataclysm.</p>
 
       <h3>Core values</h3>
       <ul>
@@ -66,20 +69,20 @@
        <li>We treat all the species well (want meat = kill your own)</li>
        <li>Healthy relationship with money (some high-yield remote work)</li>
        <li>Supportive environment to launch innovative projects</li>
-       <li>Fully immersive research enviroment designed for polyphasic sleep and peak performance</li>
+       <li>Experimenting polyphasic sleep and peak performance</li>
        <li>Permaculture and automation (we employ nature and technology to do the hard work)</li>
       </ul>
 
     <h3>Inspiration</h3>
       <ul>
-       <li><a href="http://totalism.org/">Cyberhippietotalism</a> (CHT#1) + Hacking Housing</li>
+       <li>Cyberhippietotalism + Hacking Housing</li><!-- sorry - no links in this section - https://creativecommons.org/licenses/by/4.0/ - license does require me to do so - if a website visitor want to visit these sites there are search engines available out there -->
        <li>Lemurian Embassy</li>
        <li>Auroville</li>
        <li>Tamera</li>
     </ul>
 
   <h3>Help needed</h3>
-  <p>Need to investigate form of ownership. Want to create structure stronger than myself. What if I go nuts? :)</p>
+  <p>Need to investigate form of ownership. Want to create structure stronger than myself. </p>
   <p>I was thinking about Shamir's Secret Sharing (<a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing">wiki</a>) - 100 parts of the private key - 51 pieces required to unlock the master key and make a decision... See also: Loomio and DemocracyOS.</p>
   <p>I know many people are thinking along the same lines... Moving slower to arrive faster. Setting solid foundation that will last for generations. Money is a tool that used wisely will allow us to setup proper infrastructure and allow for contingencies. If you think that <strong>genesis.re</strong> is something for you I'm happy to help you find a decent job in London (it's a bubble, everyone is hiring).</strong></p>
   <p>Considering crowdfunding campaign - 100 units - priced approximately $1k each with some incentives for early members. It's constant work in progress, remember you can always contribute on <a href="https://github.com/genesisdotre/genesisdotre.github.io">GitHub</a></p>
