--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <h3>Inspiration</h3>
       <ul>
        <li>Cyberhippietotalism + Hacking Housing</li><!-- sorry - no links in this section - https://creativecommons.org/licenses/by/4.0/ - license does require me to do so - if a website visitor want to visit these sites there are search engines available out there -->
+       <li>Liberland</li>
        <li>Lemurian Embassy</li>
        <li>Auroville</li>
        <li>Tamera</li>
