--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
       <h3>Core values</h3>
       <ul>
+        <li>Strenght, Freedom, Independence</li>
        <li>Be excellent to each other!</li>
        <li>Adding value - WIN WIN WIN - it's more than 'zero sum' game</li>
        <li>Strenght and independence (you are joining because you want)</li>
@@ -84,7 +85,7 @@
 
   <h3>Help needed</h3>
   <p>Need to investigate form of ownership. Want to create structure stronger than myself. </p>
-  <p>I was thinking about Shamir's Secret Sharing (<a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing">wiki</a>) - 100 parts of the private key - 51 pieces required to unlock the master key and make a decision... See also: Loomio and DemocracyOS.</p>
+  <p>I was thinking about Shamir's Secret Sharing (<a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing">wiki</a>) - 100 parts of the private key - 51 pieces required to unlock the master key and make a decision... See also: Loomio, DemocracyOS, Liquid Democracy (<a href="http://www.tdcommons.org/dpubs_series/79/">Google Votes</a></a>.</p>
   <p>I know many people are thinking along the same lines... Moving slower to arrive faster. Setting solid foundation that will last for generations. Money is a tool that used wisely will allow us to setup proper infrastructure and allow for contingencies. If you think that <strong>genesis.re</strong> is something for you I'm happy to help you find a decent job in London (it's a bubble, everyone is hiring).</strong></p>
   <p>Considering crowdfunding campaign - 100 units - priced approximately $1k each with some incentives for early members. It's constant work in progress, remember you can always contribute on <a href="https://github.com/genesisdotre/genesisdotre.github.io">GitHub</a></p>
   
