--- a/index.html
+++ b/index.html
@@ -61,22 +61,24 @@
 
       <h3>Core values</h3>
       <ul>
-        <li>Strenght, Freedom, Independence</li>
+       <li>Strenght, Freedom, Independence</li>
        <li>Be excellent to each other!</li>
-       <li>Adding value - WIN WIN WIN - it's more than 'zero sum' game</li>
-       <li>Strenght and independence (you are joining because you want)</li>
+       <li>Permaculture and automation (we employ nature and technology to do the hard work)</li>
        <li>Open-source from the ground-up (including legal documents)</li>
+       <li>Using open-source software and open-source hardware (not being dependent on proprietary technolgies)</li>
        <li>Communication protocols (being able to discuss 'tabu')</li>
        <li>We treat all the species well (want meat = kill your own)</li>
        <li>Healthy relationship with money (some high-yield remote work)</li>
        <li>Supportive environment to launch innovative projects</li>
-       <li>Experimenting polyphasic sleep and peak performance</li>
-       <li>Permaculture and automation (we employ nature and technology to do the hard work)</li>
+       <li>Experimenting polyphasic sleep, brain hacking (nootropics) and peak performance</li>
+       <li>RTFM - read the manual - all the information should be easily digestible</li>
+       <li>Commitment for longevity and creating long-lasting positive impact</li>
+       <li>Adding value - WIN WIN WIN - it's more than 'zero sum' game</li>
       </ul>
 
     <h3>Inspiration</h3>
       <ul>
-       <li>Cyberhippietotalism + Hacking Housing</li><!-- sorry - no links in this section - https://creativecommons.org/licenses/by/4.0/ - license does require me to do so - if a website visitor want to visit these sites there are search engines available out there -->
+       <li>totalism.org + Hacking Housing</li><!-- sorry - no links in this section - https://creativecommons.org/licenses/by/4.0/ - license does require me to do so - if a website visitor want to visit these sites there are search engines available out there -->
        <li>Liberland</li>
        <li>Lemurian Embassy</li>
        <li>Auroville</li>
@@ -84,17 +86,17 @@
     </ul>
 
   <h3>Help needed</h3>
-  <p>Need to investigate form of ownership. Want to create structure stronger than myself. </p>
-  <p>I was thinking about Shamir's Secret Sharing (<a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing">wiki</a>) - 100 parts of the private key - 51 pieces required to unlock the master key and make a decision... See also: Loomio, DemocracyOS, Liquid Democracy (<a href="http://www.tdcommons.org/dpubs_series/79/">Google Votes</a></a>.</p>
+  <p>Need to investigate form of ownership (Delaware Corporation - <i>Over 50% of publicly traded corporations in the United States and 60% of the Fortune 500 are incorporated in the state.</i> - <a href="https://en.wikipedia.org/wiki/Delaware_General_Corporation_Law">wiki</a>). Want to create structure stronger than myself. </p>
+  <p>I was thinking about Shamir's Secret Sharing (<a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing">wiki</a>) - 100 parts of the private key - 51 pieces required to unlock the master key and make a decision... See also: Loomio, DemocracyOS, Liquid Democracy...</p>
   <p>I know many people are thinking along the same lines... Moving slower to arrive faster. Setting solid foundation that will last for generations. Money is a tool that used wisely will allow us to setup proper infrastructure and allow for contingencies. If you think that <strong>genesis.re</strong> is something for you I'm happy to help you find a decent job in London (it's a bubble, everyone is hiring).</strong></p>
-  <p>Considering crowdfunding campaign - 100 units - priced approximately $1k each with some incentives for early members. It's constant work in progress, remember you can always contribute on <a href="https://github.com/genesisdotre/genesisdotre.github.io">GitHub</a></p>
+  <p>Considering crowdfunding campaign - 100 units - priced approximately ... each with some incentives for early members (not ready yet). It's constant work in progress, remember you can always contribute on <a href="https://github.com/genesisdotre">GitHub</a></p>
   
 </p>
 
   <section>
     <h3>Current way to keep in touch:</h3>
     <p>Join #genesis on hackint.org (<a href="https://webirc.hackint.org/">WebIRC</a>)</p>
-    <h3><a href="mailto:mstefanow@gmail.com">mstefanow@gmail.com</a></h3>
+    <h3><a href="mailto:mstefanow@gmail.com">mstefanow@gmail.com</a> | <a href="tel:00447586294279">0044 758 629 4279</a></h3>
     <b>Drop me a line or signup for the list:</b>
     
     <!-- Begin MailChimp Signup Form -->
@@ -120,7 +122,7 @@
   </section>
     
   <footer>
-    Source code available on <a href="https://github.com/genesisdotre">GitHub</a><br>
+    Website on <a href="https://github.com/genesisdotre">GitHub</a> | <a href="https://github.com/genesisdotre/wiki/wiki">wiki</a><br>
     Project by <a href="https://twitter.com/stefek99">@stefek99</a> and others<br>
     Artwork by <a href="http://wardyworks.co.uk">Alexander Ward</a><br>
     All the content licenced under <a href="http://www.wtfpl.net/">WTFPL</a> and <a href="https://creativecommons.org/">Creative Commons</a>
