--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       a { color: yellow; }
       article { width: 75%;max-width: 800px; color: white; margin: 20px auto; background-color: rgba(0,0,0,0.85); padding: 20px; }
       footer { font-size: 0.8em; }
+      string { font-size: 1.1em; }
+      i { font-size: 0.9em ; }
     </style>
   </head>
   <body>
@@ -25,30 +27,30 @@
       <h1>genesis.re</h1>
       <p>
         <strong>genesis</strong> as in source, beginning, origin<br>
-        <strong>re</strong> as in reset, restart, reboot<br>
-        FYI the .re domain belongs to a french teritory Réunion (<a href="https://en.wikipedia.org/wiki/R%C3%A9union">wiki</a>) on the Indian Ocean
+        <strong>re</strong> as in renew, reset, restart, reboot, rejuvenate<br>
+        <i>&nbsp;&nbsp;(domain belongs to a french teritory Réunion (<a href="https://en.wikipedia.org/wiki/R%C3%A9union">wiki</a>) on the Indian Ocean)</i>
       </p>
 
-      <h3>Principle</h3>
+      <h3>Hello World</h3>
       <ul>
-        <li>I love CCC. (and other festivals too)</li>
+        <li>I love #cccamp15. (and other festivals too)</li>
         <li>So much work wasted in setup and teardown.</li> 
         <li>I want to have festival lifestyle at all times.</li> 
         <li>Buying land in Portugal + setting up infrastructure.</li>
       </ul>
 
-      <h3>My story</h3>
-      <p>I've to many places such as Ozora, Boom, Burning Man, Glastonbury and now CCC. Having family - <a href="http://stefanow.net">stefanow.net</a> allows me to think longer term and fight for a better future of Gaia (born 2012) and Aura (born 2014).
+      <h3>About me</h3>
+      <p>I've to many places such as Ozora, Boom, Burning Man, Rainbow Gathering, Glastonbury and now #cccamp15. Having family - <a href="http://stefanow.net">stefanow.net</a> allows me to think longer term and fight for a better future of Gaia (born 2012) and Aura (born 2014). It would so nice if they were surrounded by other children and raised in a tribal / community / village spirit.
 
       <h3>3 year vision</h3>
-      <p>A few acres of land in Portugal (enough to experiment). Satellite internet. Own energy, water, waste treatment (see soil production at Boom Festival), permaculture, a lot of sun, warm climate, access to the ocean, favourable legal situation.</p>
+      <p>A few acres of land in Portugal (enough to learn and experiment). Satellite internet. Own energy, water, waste treatment (see soil production at Boom Festival), permaculture, a lot of sun, warm climate, access to the ocean, favourable legal situation.</p>
       <ul>
         <li>sun = energy</li>
         <li>ocean = water</li>
         <li>energy + water = fresh water</li>
         <li>fresh water + sun = plants</li>
         <li>plants = food</li>
-        <li>&nbsp;&nbsp;&nbsp;(not off-the-grid from day 1 but start with that vision in mind)</li>
+        <li>&nbsp;&nbsp;(off-the-grid vision in mind)</li>
         </ul>
       </p>
 
@@ -57,7 +59,7 @@
       <p>Own currency, own passports, own sattelite network, own fiber optic underneath the ocean...</p>
       
       <h3>100 year vision</h3>
-      <p>We have all the systems in place, we can spread to outer space. Human consciousness is beatifully unique - it would be a shame to go excint because of some silly planetary cataclysm.</p>
+      <p><i>&nbsp;&nbsp;(there is one but you may say that I'm crazy so I'll leave it untill we meet for a beer or two)</i></p><!-- you can always see git history for that matter -->
 
       <h3>Core values</h3>
       <ul>
@@ -88,9 +90,9 @@
 
   <h3>Help needed</h3>
   <p>Need to investigate form of ownership (Delaware Corporation - <i>Over 50% of publicly traded corporations in the United States and 60% of the Fortune 500 are incorporated in the state.</i> - <a href="https://en.wikipedia.org/wiki/Delaware_General_Corporation_Law">wiki</a>). Want to create structure stronger than myself. </p>
-  <p>I was thinking about Shamir's Secret Sharing (<a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing">wiki</a>) - 100 parts of the private key - 51 pieces required to unlock the master key and make a decision... See also: Loomio, DemocracyOS, Liquid Democracy...</p>
-  <p>I know many people are thinking along the same lines... Moving slower to arrive faster. Setting solid foundation that will last for generations. Money is a tool that used wisely will allow us to setup proper infrastructure and allow for contingencies. If you think that <strong>genesis.re</strong> is something for you I'm happy to help you find a decent job in London (it's a bubble, everyone is hiring).</strong></p>
-  <p>Considering crowdfunding campaign - 100 units - priced approximately ... each with some incentives for early members (not ready yet). It's constant work in progress, remember you can always contribute on <a href="https://github.com/genesisdotre">GitHub</a></p>
+  <p>I was thinking about Shamir's Secret Sharing (<a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing">wiki</a>) - 100 parts of the private key - 51 pieces required to unlock the master key and make a decision. See also: Loomio, DemocracyOS, Liquid Democracy...</p>
+  <p>Moving slower to arrive faster. Setting solid foundation that will last for generations. Money is a tool that used wisely will allow us to setup proper infrastructure and allow for contingencies. If you think that <strong>genesis.re</strong> is something for you I'm happy to help you find a decent job in London (it's a bubble, everyone is hiring).</p>
+  <p>Considering crowdfunding campaign - 100 units - priced approximately ... each with some incentives for early members (not ready yet). It's constant work in progress, remember you can always contribute on <a href="https://github.com/genesisdotre">GitHub</a> and <a href="https://github.com/genesisdotre/wiki/wiki">wiki</a>.</p>
   
 </p>
 
