--- a/index.html
+++ b/index.html
@@ -92,15 +92,17 @@
   <p>Need to investigate form of ownership (Delaware Corporation - <i>Over 50% of publicly traded corporations in the United States and 60% of the Fortune 500 are incorporated in the state.</i> - <a href="https://en.wikipedia.org/wiki/Delaware_General_Corporation_Law">wiki</a>). Want to create structure stronger than myself. </p>
   <p>I was thinking about Shamir's Secret Sharing (<a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing">wiki</a>) - 100 parts of the private key - 51 pieces required to unlock the master key and make a decision. See also: Loomio, DemocracyOS, Liquid Democracy...</p>
   <p>Moving slower to arrive faster. Setting solid foundation that will last for generations. Money is a tool that used wisely will allow us to setup proper infrastructure and allow for contingencies. If you think that <strong>genesis.re</strong> is something for you I'm happy to help you find a decent job in London (it's a bubble, everyone is hiring).</p>
-  <p>Considering crowdfunding campaign - 100 units - priced approximately ... each with some incentives for early members (not ready yet). It's constant work in progress, remember you can always contribute on <a href="https://github.com/genesisdotre">GitHub</a> and <a href="https://github.com/genesisdotre/wiki/wiki">wiki</a>.</p>
+  <p>Considering crowdfunding campaign - 100 units - priced approximately ... each with some incentives for early members (not ready yet - need to setup legal framework first). It's constant work in progress, remember you can always contribute on <a href="https://github.com/genesisdotre">GitHub</a> and <a href="https://github.com/genesisdotre/wiki/wiki">wiki</a>.</p>
   
 </p>
 
   <section>
-    <h3>Current way to keep in touch:</h3>
+    <h3>Current ways to keep in touch:</h3>
+    <p>Follow <a href="https://twitter.com/genesisdotre">@genesisdotre</a> on Twitter</p>
     <p>Join #genesis on hackint.org (<a href="https://webirc.hackint.org/">WebIRC</a>)</p>
-    <h3><a href="mailto:mstefanow@gmail.com">mstefanow@gmail.com</a> | <a href="tel:00447586294279">0044 758 629 4279</a></h3>
-    <b>Drop me a line or signup for the list:</b>
+    <h3>Contact me anytime <a href="mailto:mstefanow@gmail.com">mstefanow@gmail.com</a> | <a href="tel:00447586294279">0044 758 629 4279</a></h3>
+    <p>Edit website on <a href="https://github.com/genesisdotre">GitHub</a> | improve <a href="https://github.com/genesisdotre/wiki/wiki">wiki</a></p>
+    <b>Signup for the list:</b>
     
     <!-- Begin MailChimp Signup Form -->
       <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
@@ -125,10 +127,9 @@
   </section>
     
   <footer>
-    Website on <a href="https://github.com/genesisdotre">GitHub</a> | <a href="https://github.com/genesisdotre/wiki/wiki">wiki</a><br>
     Project by <a href="https://twitter.com/stefek99">@stefek99</a> and others<br>
     Artwork by <a href="http://wardyworks.co.uk">Alexander Ward</a><br>
-    All the content licenced under <a href="http://www.wtfpl.net/">WTFPL</a> and <a href="https://creativecommons.org/">Creative Commons</a>
+    Content licenced under <a href="http://www.wtfpl.net/">WTFPL</a> and <a href="https://creativecommons.org/">Creative Commons</a>
   </footer>
   
   </article>
