some more explanation
meat + legal documents (constantl gettin more feedback)

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       footer { font-size: 0.8em; }
       string { font-size: 1.1em; }
       i { font-size: 0.9em ; }
+      .values li { margin-bottom: 10px; }
     </style>
   </head>
   <body>
@@ -62,14 +63,14 @@
       <p><i>&nbsp;&nbsp;(there is one but you may say that I'm crazy so I'll leave it untill we meet for a beer or two)</i></p><!-- you can always see git history for that matter -->
 
       <h3>Core values</h3>
-      <ul>
+      <ul class="values">
        <li>Strenght, Freedom, Independence</li>
        <li>Be excellent to each other!</li>
        <li>Permaculture and automation (we employ nature and technology to do the hard work)</li>
-       <li>Open-source from the ground-up (including legal documents)</li>
+       <li>Open-source from the ground-up (including legal documents - BTW - they should be 1 page long max)</li>
        <li>Using open-source software and open-source hardware (not being dependent on proprietary technolgies)</li>
-       <li>Communication protocols (being able to discuss 'tabu')</li>
-       <li>We treat all the species well (want meat = kill your own)</li>
+       <li>Communication protocols (being able to discuss 'tabu' such as ...,  ..., ... - they don't teach that in school)</li>
+       <li>We treat all the species well (animal exploitation on industrial scale is not cool)</li>
        <li>Healthy relationship with money (some high-yield remote work)</li>
        <li>Supportive environment to launch innovative projects</li>
        <li>Experimenting polyphasic sleep, brain hacking (nootropics) and peak performance</li>
