google doc iframe

--- a/recruitment/index.html
+++ b/recruitment/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <meta http-equiv="refresh" content="0; url=https://github.com/genesisdotre/recruitment">
+  <title>Recruitment</title>
+  <!-- <meta http-equiv="refresh" content="0; url=https://github.com/genesisdotre/recruitment"> -->
  </head>
  <body>
+  
+  <h1>1-page GoogleDoc containing the idea</h1>
+  
+  <iframe src="https://docs.google.com/document/d/18jh4TfiwYl0PTeAG2NuR92mJJFpsGCKDZSU1vdZMQyU/pub?embedded=true"></iframe>
 
  </body>
 </html>
