--- a/recruitment/index.html
+++ b/recruitment/index.html
@@ -2,12 +2,14 @@
 <html>
  <head>
   <title>Recruitment</title>
-  <!-- <meta http-equiv="refresh" content="0; url=https://github.com/genesisdotre/recruitment"> -->
+  <style>
+   html, body { margin: 0;  padding: 0; overflow: hidden; }
+   iframe { width:100vw; height: 100vh;}
+  </style>
+  
  </head>
  <body>
-  
-  <h1>1-page GoogleDoc containing the idea</h1>
-  
+
   <iframe src="https://docs.google.com/document/d/18jh4TfiwYl0PTeAG2NuR92mJJFpsGCKDZSU1vdZMQyU/pub?embedded=true"></iframe>
 
  </body>
