Link to recruitment

--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
         <i>&nbsp;&nbsp;(domain belongs to a french teritory Réunion on the Indian Ocean)</i>
       </p>
       
-      <h3 class="focus">I think I need to focus on obtaining capital in region of €50k to move things forward.<br><br>
-      Until then my focus is directed towards obtaining required capital.<br><br>
-      This is a long term project and I'm willing to make necessary commitments / sacrifices to make things happen.</h3>
+      <h3 class="focus">
+        I need to focus on obtaining capital to move things forward.<br><br>
+        Until then all my efforts are just a mental exercise.<br><br>
+        This is a long term project and I'm willing to make necessary decisions / commitments / sacrifices to make things happen.<br><br>
+        Current gameplan: <a href="http://genesis.re/cruitment/">genesis.re/cruitment</a> - helping exceptional people relocate and find a high paid job in London.
+      </h3>
 
       <h3>Hello World</h3>
       <ul>
