no more recruiting (now stock exchange)

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <p><strong>re</strong> as in renew, reset, restart, reboot, rejuvenate</p>
       
       <section>
+        Desiging opeating system for the new world.<br><br>
         Buying land in Portugal to set up infrastructure.<br><br>
         Focusing on obtaining capital to move things forward.<br><br>
-        Recruitment as the money making vehicle: <a href="http://genesis.re/cruitment/">genesis.re/cruitment</a><br><br>
-        Visit and edit: <a href="http://genesis.re/wiki/">genesis.re/wiki</a><br>
-        Keep in touch:&nbsp; <a href="mailto:email@genesis.re">email@genesis.re</a><br>
-        Call anytime:&nbsp;&nbsp; <a href="tel:+447586294279">+44&nbsp;758&nbsp;629&nbsp;4279</a>
+        Visit and edit: <a href="http://genesis.re/wiki/">genesis.re/wiki</a><br><br>
+        Keep in touch:&nbsp; <a href="mailto:email@genesis.re">email@genesis.re</a><br><br>
+        Call anytime:&nbsp;&nbsp; <a href="tel:+447586294279">+44&nbsp;758&nbsp;629&nbsp;4279 (day and night)</a>
       </section>
       <footer>
         improve <a href="http://genesis.re/wiki">wiki</a> &bull; edit website on <a href="https://github.com/genesisdotre">GitHub</a> &bull; artwork by <a href="http://wardyworks.co.uk">Alexander Ward</a><br>
