--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         Focusing on obtaining capital to move things forward.<br><br>
         Visit and edit: <a href="http://genesis.re/wiki/">genesis.re/wiki</a><br><br>
         Keep in touch:&nbsp; <a href="mailto:email@genesis.re">email@genesis.re</a><br><br>
-        Call anytime:&nbsp;&nbsp; <a href="tel:+447586294279">+44&nbsp;758&nbsp;629&nbsp;4279 (day and night)</a>
+        Call anytime:&nbsp;&nbsp; <a href="tel:+447586294279">+44&nbsp;758&nbsp;629&nbsp;4279</a> <i>(day and night)</i>
       </section>
       <footer>
         improve <a href="http://genesis.re/wiki">wiki</a> &bull; edit website on <a href="https://github.com/genesisdotre">GitHub</a> &bull; artwork by <a href="http://wardyworks.co.uk">Alexander Ward</a><br>
