--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
       <p><strong>re</strong> as in renew, reset, restart, reboot, rejuvenate</p>
       
       <section>
-        Desiging opeating system for the new world.<br><br>
-        Buying land in Portugal to set up infrastructure.<br><br>
-        Focusing on obtaining capital to move things forward.<br><br>
+        Pressing reset button on humanity -<br>
+        Designing operating system for the new world.<br><br>
+        Buying land in Portugal to set up infrastructure - <br>
+        To learn how to live on Earth before spreading to outer space.<br>
+        Current focus: establishing processes and obtaining capital.<br><br>
         Visit and edit: <a href="http://genesis.re/wiki/">genesis.re/wiki</a><br><br>
         Keep in touch:&nbsp; <a href="mailto:email@genesis.re">email@genesis.re</a><br><br>
         Call anytime:&nbsp;&nbsp; <a href="tel:+447586294279">+44&nbsp;758&nbsp;629&nbsp;4279</a> <i>(day and night)</i>
