--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       *       { font-family: monospace; }
       a       { color: yellow; }
       article { width: 75%; max-width: 800px; color: white; margin: 20px auto; background-color: rgba(0,0,0,0.85); padding: 20px; }
-      footer  { font-size: 0.8em; text-align: center;}
+      footer  { font-size: 0.7em; text-align: center;}
       h1      { font-size: 2em; margin-top: 0; }
       strong  { font-size: 1.3em; }
       section { font-size: 1.1em; padding: 20px; border: 3px solid white; margin: 40px auto; max-width: 90%; }
@@ -24,16 +24,22 @@
       
       <section>
         Pressing reset button on humanity -<br>
-        Designing operating system for the new world.<br><br>
-        Buying land in Portugal to set up infrastructure - <br>
+        Designing operating system for the new world.<br>
+        <br>
+        Buying land in Portugal to set up infrastructure -<br>
         To learn how to live on Earth before spreading to outer space.<br>
-        Current focus: establishing processes and obtaining capital.<br><br>
-        Visit and edit: <a href="http://genesis.re/wiki/">genesis.re/wiki</a><br><br>
-        Keep in touch:&nbsp; <a href="mailto:email@genesis.re">email@genesis.re</a><br><br>
-        Call anytime:&nbsp;&nbsp; <a href="tel:+447586294279">+44&nbsp;758&nbsp;629&nbsp;4279</a> <i>(day and night)</i>
+        <br>
+        Current area of work: establishing processes and obtaining capital.<br>
+        <br>
+        <br>
+        Visit and edit: <strong><a href="http://genesis.re/wiki/">genesis.re/wiki</a></strong>
       </section>
       <footer>
-        improve <a href="http://genesis.re/wiki">wiki</a> &bull; edit website on <a href="https://github.com/genesisdotre">GitHub</a> &bull; artwork by <a href="http://wardyworks.co.uk">Alexander Ward</a><br>
+        <a href="http://genesis.re/wiki">wiki</a> &bull; 
+        <a href="https://github.com/genesisdotre">GitHub</a> &bull;  
+        <a href="http://wardyworks.co.uk">artwork</a> &bull;
+        <a href="mailto:email@genesis.re">email@genesis.re</a> &bull;
+        <a href="tel:+447586294279">+44&nbsp;758&nbsp;629&nbsp;4279</a>
       </footer>
     </article>
   </body>
