--- a/index.html
+++ b/index.html
@@ -23,14 +23,11 @@
       <p><strong>re</strong> as in renew, reset, restart, reboot, rejuvenate</p>
       
       <section>
-        Pressing reset button on humanity -<br>
-        Designing operating system for the new world.<br>
+        Pressing reset button on humanity - designing operating system for the new world.<br>
         <br>
-        Buying land in Portugal to set up infrastructure -<br>
-        To learn how to live on Earth before spreading to outer space.<br>
+        Buying land in Portugal to set up infrastructure - to learn how to live on Earth before spreading to outer space.<br>
         <br>
-        Current area of work: establishing processes and obtaining capital.<br>
-        <br>
+        Current area of work: <b>establishing processes</b> and <b>obtaining capital</b>.<br>
         <br>
         Visit and edit: <strong><a href="http://genesis.re/wiki/">genesis.re/wiki</a></strong>
       </section>
