--- a/index.html
+++ b/index.html
@@ -9,36 +9,58 @@
       html    { background: url(http://i.imgur.com/HFDc8be.jpg) no-repeat center center fixed; background-size: cover; font-size: 1.3em;}
       *       { font-family: monospace; }
       a       { color: yellow; }
-      article { width: 75%; max-width: 800px; color: white; margin: 20px auto; background-color: rgba(0,0,0,0.85); padding: 20px; }
-      footer  { font-size: 0.7em; text-align: center;}
-      h1      { font-size: 2em; margin-top: 0; }
-      strong  { font-size: 1.3em; }
-      section { font-size: 1.1em; padding: 20px; border: 3px solid white; margin: 40px auto; max-width: 90%; }
+      article { background-color: rgba(0,0,0,0.75); padding: 20px; position: absolute; bottom: 10px; right: 10px;}
+      section { border: 3px solid white; padding: 15px; color: white;}
+      #stripe-form { height: 35px; }
     </style>
   </head>
   <body>
     <article>
-      <h1>genesis.re</h1>
-      <p><strong>genesis</strong> as in source, beginning, origin</p>
-      <p><strong>re</strong> as in renew, reset, restart, reboot, rejuvenate</p>
       
-    
       <section>
-        Pressing reset button on humanity - designing operating system for the new world.<br>
+
+        <img src="images/websummit.png" width="200"><br><br>
+
+        How much equity?<br><br>
+
+        <input type="range" min="0.1" max="5" step="0.1" value="1" id="equity-slider"><br>
+        <span id="equity-value" style="width: 40px; display:inline-block"></span>
+        <span id="equity-cost"></span>
+
+        <br><br>
+
+        <form name="_xclick" action="https://www.paypal.com/uk/cgi-bin/webscr" method="post">
+          <input type="hidden" name="cmd" value="_xclick">
+          <input type="hidden" name="business" value="email@genesis.re">
+          <input type="hidden" name="currency_code" value="USD">
+          <input type="hidden" name="item_name" value="" id="paypal-name">
+          <input type="hidden" name="amount" value="" id="paypal-amount">
+          <input type="hidden" name="no_shipping" value="1">
+          <input type="image" src="http://www.paypal.com/en_GB/i/btn/x-click-but01.gif" border="0" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
+        </form>
+
         <br>
-        Buying land in Portugal to set up infrastructure - to learn how to live on Earth before we spread out to outer space.<br>
-        <br>
-        Current area of work: <b>establishing processes</b> and <b>obtaining capital</b>.<br>
-        <br>
-        Visit and edit: <strong><a href="http://genesis.re/wiki/">genesis.re/wiki</a></strong>
+
+        <a href="http://genesis.re/wiki/">genesis.re/wiki</a>
+
       </section>
-      <footer>
-        <a href="http://genesis.re/wiki">wiki</a> &bull; 
-        <a href="https://github.com/genesisdotre">GitHub</a> &bull;  
-        <a href="http://wardyworks.co.uk">artwork</a> &bull;
-        <a href="mailto:email@genesis.re">email@genesis.re</a> &bull;
-        <a href="tel:+447586294279">+44&nbsp;758&nbsp;629&nbsp;4279</a>
-      </footer>
+
     </article>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script>
+      $("#equity-slider").on("change", function() {
+        var valString = $(this).val();
+        var valNumber = parseFloat(valString);
+        $("#equity-value").html(valNumber.toFixed(1) + "%");
+        $("#equity-cost").html("$" + (valNumber * 10000));
+
+
+        $("#paypal-name").attr("value", valString + "% equity");
+        $("#paypal-amount").attr("value", valNumber * 10);
+
+
+      }).trigger("change");
+    </script>
   </body>
 </html>
