--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           name: 'genesis.re (Web Summit)',
           description: valNumber.toFixed(1) + "% equity",
           currency: "usd",
-          amount: valNumber * 10 // 10000
+          amount: valNumber * 10000
         });
         e.preventDefault();
       });
