--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
           var data = {
             id : token.id,
-            howmany : valNumber * 10
+            howmany : valNumber * 1000000
           };
 
           //$.post("http://localhost:3002/charge", data, function(response) {
