--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <style>
-      html    { background: url(http://i.imgur.com/HFDc8be.jpg) no-repeat center center fixed; background-size: cover; font-size: 1.3em;}
+      html    { background: url(https://i.imgur.com/HFDc8be.jpg) no-repeat center center fixed; background-size: cover; font-size: 1.3em;}
       *       { font-family: monospace; }
       a       { color: yellow; }
       article { background-color: rgba(0,0,0,0.75); padding: 20px; position: absolute; bottom: 10px; right: 10px;}
